@@ -1,3 +1,6 @@
+2020-12-13 Luigi Scarso <luigi.scarso@gmail.com> 
+    * fixed Hyphenation issue regarding frozen glyph nodes (M.F. Krüger)
+
 2020-12-12 Luigi Scarso <luigi.scarso@gmail.com> 
     * fixed  luatex segfault with huge romannumeral overfull (H. Hagen)
     * automake (GNU automake) 1.16.3
